--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <label for="mail">Email:</label>
         <input type="email" id="mail" name="user_email">
 
-        <label for="other-title">Your Job Role:</label>
-        <input type="text" id="other-title" name="job_role_other">
+        <label for="other-title" class="other">Your Job Role:</label>
+        <input type="text" id="other-title" class="other" name="job_role_other">
 
         <label for="title">Job Role</label>
         <select id="title" name="user_title">
