--- a/index.html
+++ b/index.html
@@ -56,20 +56,24 @@
 
         <div>
           <label for="design">Design:</label>
-          <select id="design" name="user_design">
-            <option>Select Theme</option>
+          <select id="design" name="user_design" onchange="showtextbox()">
+            <option value="select theme">Select Theme</option>
             <option value="js puns">Theme - JS Puns</option>
             <option value="heart js">Theme - I &#9829; JS</option>
           </select>
         </div>
 
         <div id="colors-js-puns" class="">
-          <label for="color">Color:</label>
-          <select id="color">
+          <label id="color" for="color" style="display: none;">Color:</label>
+          <select id="puns" style="display: none;">
+            <option value="selectcolor">Select Color</option>
             <option value="cornflowerblue">Cornflower Blue (JS Puns shirt only)</option>
             <option value="darkslategrey">Dark Slate Grey (JS Puns shirt only)</option>
             <option value="gold">Gold (JS Puns shirt only)</option>
-            <option value="tomato">Tomato (I &#9829; JS shirt only)</option>
+          </select>
+          <select id="heart" style="display: none;">
+            <option value="selectcolor">Select Color</option>
+            <option value="tomato"> Tomato (I &#9829; JS shirt only)</option>
             <option value="steelblue">Steel Blue (I &#9829; JS shirt only)</option>
             <option value="dimgrey">Dim Grey (I &#9829; JS shirt only)</option>
           </select>
