--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <legend>Payment Info</legend>
 
         <label for="payment">I'm going to pay with:</label>
-        <select id="payment" name="user_payment">
+        <select id="payment" name="user_payment" onchange="paymentSelect()">
           <option value="select_method">Select Payment Method</option>
           <option value="credit card">Credit Card</option>
           <option value="paypal">PayPal</option>
@@ -145,11 +145,11 @@
           </select>
         </div>
 
-        <div>
+        <div class="paypal instructions">
         	<p>If you selected the PayPal option we'll take you to Paypal's site to set up your billing information, when you click “Register” below.</p>
         </div>
 
-        <div>
+        <div class="bitcoin instructions">
         	<p>If you selected the Bitcoin option we'll take you to the Coinbase site to set up your billing information. Due to the nature of exchanging Bitcoin, all Bitcoin transactions will be final.</p>
         </div>
 
