--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       </fieldset>
 
-      <button type="submit">Register</button>
+      <button class="submit-btn" type="submit">Register</button>
 
     </form>
 
