--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 
         <label for="name">Name:</label>
         <input type="text" id="name" name="user_name">
+        <span class="nameflsh flashMessage">Please enter a valid name</span>
 
         <label for="mail">Email:</label>
         <input type="email" id="mail" name="user_email">
+        <span class="mailflsh flashMessage">Please enter a valid email address</span>
+
 
         <label for="other-title" class="other">Your Job Role:</label>
         <input type="text" id="other-title" class="other" name="job_role_other">
@@ -108,16 +111,19 @@
           <div class="col-6 col">
             <label for="cc-num">Card Number:</label>
         	  <input id="cc-num" name="user_cc-num" type="text">
+            <span class="ccnum flashMessage">Please enter a valid credit card number</span>
           </div>
 
           <div class="col-3 col">
             <label for="zip">Zip Code:</label>
             <input id="zip" name="user_zip" type="text">
+            <span class="zip flashMessage">Please enter a valid zip code</span>
           </div>
 
           <div class="col-3 col">
             <label for="cvv">CVV:</label>
             <input id="cvv" name="user_cvv" type="text">
+            <span class="cvv flashMessage">Please enter a valid CVV number</span>
           </div>
 
           <label for="exp-month">Expiration Date:</label>
