--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         </div>
 
         <div id="colors-js-puns" class="">
-          <label id="color" for="color" style="display: none;">Color:</label>
-          <select id="puns" style="display: none;">
+          <label id="color" for="color">Color:</label>
+          <select id="puns">
             <option value="selectcolor">Select Color</option>
             <option value="cornflowerblue">Cornflower Blue (JS Puns shirt only)</option>
             <option value="darkslategrey">Dark Slate Grey (JS Puns shirt only)</option>
             <option value="gold">Gold (JS Puns shirt only)</option>
           </select>
-          <select id="heart" style="display: none;">
+          <select id="heart">
             <option value="selectcolor">Select Color</option>
             <option value="tomato"> Tomato (I &#9829; JS shirt only)</option>
             <option value="steelblue">Steel Blue (I &#9829; JS shirt only)</option>
@@ -111,7 +111,7 @@
           <div class="col-6 col">
             <label for="cc-num">Card Number:</label>
         	  <input id="cc-num" name="user_cc-num" type="text">
-            <span class="ccnum flashMessage">Please enter a valid credit card number</span>
+            <span class="ccnum flashMessage clearfix::after">Please enter a valid credit card number</span>
           </div>
 
           <div class="col-3 col">
@@ -126,7 +126,7 @@
             <span class="cvv flashMessage">Please enter a valid CVV number</span>
           </div>
 
-          <label for="exp-month">Expiration Date:</label>
+          <label id="marg-fix" class="clearfix" for="exp-month">Expiration Date:</label>
           <select id="exp-month" name="user_exp-month">
             <option value="1">1 - January</option>
             <option value="2">2 - February</option>
@@ -141,6 +141,7 @@
             <option value="11">11 - November</option>
             <option value="12">12 - December</option>
           </select>
+
           <label for="exp-year">Expiration Year:</label>
           <select id="exp-year" name="user_exp-year">
             <option value="2016">2016</option>
