--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div>
           <label for="design">Design:</label>
-          <select id="design" name="user_design" onchange="showtextbox()">
+          <select id="design" name="user_design">
             <option value="select theme">Select Theme</option>
             <option value="js puns">Theme - JS Puns</option>
             <option value="heart js">Theme - I &#9829; JS</option>
@@ -86,13 +86,14 @@
       <fieldset id="reg-activity" class="activities">
         <legend>Register for Activities</legend>
         <label><input type="checkbox" name="all" value="200"> Main Conference — $200</label>
-        <label id="js-frame"><input type="checkbox" name="js-frameworks" value="100"> JavaScript Frameworks Workshop — Tuesday 9am-12pm, $100</label>
-        <label id="js-libs"><input type="checkbox" name="js-libs" value="100"> JavaScript Libraries Workshop — Tuesday 1pm-4pm, $100</label>
-        <label id="exp"><input type="checkbox" name="express" value="100"> Express Workshop — Tuesday 9am-12pm, $100</label>
-        <label id="nodejs"><input type="checkbox" name="node" value="100"> Node.js Workshop — Tuesday 1pm-4pm, $100</label>
+        <label id="js-frame"><input class="frame" type="checkbox" name="js-frameworks" value="100"> JavaScript Frameworks Workshop — Tuesday 9am-12pm, $100</label>
+        <label id="js-libs"><input class="libs" type="checkbox" name="js-libs" value="100"> JavaScript Libraries Workshop — Tuesday 1pm-4pm, $100</label>
+        <label id="exp"><input class="exps" type="checkbox" name="express" value="100"> Express Workshop — Tuesday 9am-12pm, $100</label>
+        <label id="nodejs"><input class="njs" type="checkbox" name="node" value="100"> Node.js Workshop — Tuesday 1pm-4pm, $100</label>
         <label><input type="checkbox" name="build-tools" value="100"> Build tools Workshop — Wednesday 9am-12pm, $100</label>
         <label><input type="checkbox" name="npm" value="100"> npm Workshop — Wednesday 1pm-4pm, $100</label>
         <label>Total: <output type="text" id="total" class="interests"></label>
+        <span class="act flashMessage">Please register for at least one activity</span>
       </fieldset>
 
       <fieldset>
