--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
           <div class="col-3 col">
             <label for="zip">Zip Code:</label>
             <input id="zip" name="user_zip" type="text">
-            <span class="zip flashMessage">Please enter a valid zip code</span>
+            <span class="zip flashMessage">Please enter a 5 digit zip code</span>
           </div>
 
           <div class="col-3 col">
             <label for="cvv">CVV:</label>
             <input id="cvv" name="user_cvv" type="text">
-            <span class="cvv flashMessage">Please enter a valid CVV number</span>
+            <span class="cvv flashMessage">Please enter a 3 digit CVV number</span>
           </div>
 
           <label id="marg-fix" class="clearfix" for="exp-month">Expiration Date:</label>
